RESOLVED FIXED86249
Skia does not respect a specified InterpolationQuality
https://bugs.webkit.org/show_bug.cgi?id=86249
Summary Skia does not respect a specified InterpolationQuality
Keyar Hood
Reported 2012-05-11 13:48:22 PDT
Right now the Skia code in ImageSkia.cpp does not properly respect what Interpolation Quality is set to. It should use the specified InterpolationQuality but allow demotions of quality as appropriate.
Attachments
Patch (8.30 KB, patch)
2012-05-15 08:24 PDT, Keyar Hood
no flags
Patch (8.04 KB, patch)
2012-05-15 11:12 PDT, Keyar Hood
no flags
Patch (8.62 KB, patch)
2012-05-15 13:52 PDT, Keyar Hood
no flags
Keyar Hood
Comment 1 2012-05-15 08:24:57 PDT
Stephen White
Comment 2 2012-05-15 11:02:19 PDT
Comment on attachment 141975 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=141975&action=review > Source/WebCore/platform/graphics/GraphicsContext.cpp:488 > + // The precompiler bit is just a hack to make the chromium code work for changes > + // related to (86249). I'd remove this comment -- chromium is now doing what the FIXME above says it should do (and what the useLowQualityScale parameter implies). > Source/WebCore/platform/graphics/GraphicsContext.cpp:585 > + // The precompiler bit is just a hack to make the chromium code work for changes > + // related to (86249). Same as above.
Keyar Hood
Comment 3 2012-05-15 11:12:29 PDT
Keyar Hood
Comment 4 2012-05-15 13:52:15 PDT
Stephen White
Comment 5 2012-05-15 13:55:21 PDT
Comment on attachment 142046 [details] Patch Looks good. Thanks for the extra fixes. r=me
WebKit Review Bot
Comment 6 2012-05-15 16:52:13 PDT
Comment on attachment 142046 [details] Patch Clearing flags on attachment: 142046 Committed r117187: <http://trac.webkit.org/changeset/117187>
WebKit Review Bot
Comment 7 2012-05-15 16:52:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.